# agraph

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .yamllint  AGraph_Execution_Process_Analysis.md  AGraph_Pipeline_Performance_Analysis.md  AGraph_Technical_Assessment_Report.md  CHANGELOG.md  KnowledgeGraphBuilderV2_Sequence_Diagram.md  LICENSE  MANIFEST.in  Makefile  PHASE1_STEP_ABSTRACTION_SUMMARY.md  PHASE2_PIPELINE_INTEGRATION_SUMMARY.md  README.md  UNIT_TESTS_TODO.md  bandit-report.json  build_from_text_sequence_diagram.md  main.py  performance_benchmark.py  pyproject.toml  requirements.txt  test_positioning_integration.py  test_positioning_mock.py  数据分析助手api.md
.github/workflows/: code-quality.yml  pre-commit.yml  tests.yml
agraph/: __init__.py  agraph.py  chunker.py  config.py  entities.py  graph.py  logger.py  relations.py  text.py  types.py  utils.py
agraph-mcp/: .env.example  README.md  USAGE.md  claude_desktop_config.json  config.py  example_usage.py  exceptions.py  pyproject.toml  server.py  start_server.py  test_agraph.py  test_server.py
agraph/api/: README.md  __init__.py  app.py  dependencies.py  document_manager.py  example.py  models.py  requirements.txt  server.py
agraph/base/: __init__.py  base.py  batch.py  cache.py  clusters.py  dao.py  entities.py  graph.py  indexes.py  interfaces.py  manager_factory.py  managers.py  mixins.py  optimized_graph.py  optimized_managers.py  relations.py  result.py  text.py  types.py  unified_managers.py
agraph/builder/: __init__.py  builder.py  builder_legacy_backup.py  builder_v2.py  compatibility.py  concurrency_config.py  concurrent_pipeline.py  pipeline.py  pipeline_factory.py
agraph/builders/: __init__.py  base_builders.py  graph_builder.py  interfaces.py  lightrag_builder.py  llm_builders.py  mixins.py
agraph/config/: __init__.py  base.py  builder.py  project.py  settings.py  utils.py
agraph/embeddings/: __init__.py  graph_embedding.py
agraph/extractors/: __init__.py  entity_extractor.py  (+3 more)
cache/: build_status.json  cluster_formation_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_a683096011db3975a1e401e33b0047d1f2677a11efe85ef12806f016ae039795.metadata.json  doc_relations_70f71c1589e137a90f1e9c947d90240c8aac2e0e5ec0d412887bd8f3d1386b96.json  entity_extraction_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_fd322f44da6b499c4544710670936b8abc521dc83524931b15abf0bec7ea9b78.metadata.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_00261d6eba3797b3f271a422b5b92df9b753a8550f98e82004129a69fa648516.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_00261d6eba3797b3f271a422b5b92df9b753a8550f98e82004129a69fa648516.metadata.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_4bcb9d81bc214a0375671b964519c0fa7a807e7489ee7cc1588c7a27fdb4d701.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_4bcb9d81bc214a0375671b964519c0fa7a807e7489ee7cc1588c7a27fdb4d701.metadata.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_a0803460a446277887a2f6668a7b100b41b5fe53ad9acfb6c91a573cde7f29c9.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_a0803460a446277887a2f6668a7b100b41b5fe53ad9acfb6c91a573cde7f29c9.metadata.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_a79deb097c0588edc66451d0089f5984e56c719830d4c3155abf2871d400c1a0.json  graph_assembly_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_a79deb097c0588edc66451d0089f5984e56c719830d4c3155abf2871d400c1a0.metadata.json  relation_extraction_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_038e07e827593388a216b5ade6192decf64a221222513966c339d670401efd4f.metadata.json  text_chunking_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_9c63c539457f2f8e7ebaaeedda5cb40b7720982fa7f2465b64edd3f4a32f77ce.metadata.json  text_chunking_f91b8524fcdb0d3e6595a62799529fe4ad25d97da1f8448de1ad5187acc27a66_cc091a49e99d0ff4865d8ab7bd46eeb0502cc0f5fffc782c812e0b3a944d3597.metadata.json
design/: api_integration_guide.md  component_specifications.md  development_todo_list.md  frontend_architecture.md  knowledge_graph_builder.md
docs/: AGraph_Design_Document.md  AGraph_Design_Issues_Analysis.md  AGraph_README.md  AGraph_Refactoring_Plan.md  AGraph_UML_Diagrams.md  Event_System_Guide.md  Migration_Guide.md  Performance_Optimization_Guide.md  Pipeline_Customization_Tutorial.md  Quickstart_Performance_Integration.md  README_import_export.md  Transaction_System_Guide.md  agraph_tutorial.md  api_separation_guide.md  custom_vectordb_guide.md  develop.md  graphml_integration_guide.md  import_export_tutorial.md  lightrag_builder.md  llm_builders.md  python-mcp-sdk.md  quick_start_import_export.md  vectordb_tutorial.md  workdir_configuration.md
examples/: README.md  README_examples.md  __init__.py  agraph_complete_demo.py  agraph_documents_demo.py  agraph_example.py  agraph_quickstart.py  agraph_vs_traditional.py  builder_example.py  chroma_vectorstore_example.py  concurrent_performance_demo.py  config_management_example.py  end_to_end_example.py  folder_processing_example.py  graph_builder_example.py  incremental_updates_example.py  lightrag_example.py  llm_builder_example.py  llm_builder_folder.py  openai_embeddings_example.py  performance_optimization_demo.py  simple_folder_example.py  unified_architecture_demo.py
frontend/: .env.development  .env.production  STATE_MANAGEMENT_SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  test_project_context.html  tsconfig.app.json  vite.config.ts
scripts/: check_code.sh  fix_code.sh
test_cache/: build_status.json
tests/: __init__.py  conftest.py  test_builder_steps.py  test_chroma_vectordb.py  test_config.py  test_embeddings.py  test_entities.py  test_graph.py  test_incremental_updates.py  test_pipeline_integration.py  test_relations.py  test_types.py  test_utils.py  test_vectordb.py
(+396 files in other folders)
