[project]
name = "agraph-mcp"
version = "0.2.3"
description = "AGraph MCP Server - Direct AGraph Instance Version"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "loguru>=0.7.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
